<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <GridLayout
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        android:theme="@style/CalcTheme"
        tools:context=".MainActivity">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textResult"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/layout_height"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="fill"
            android:text=""
            android:textAlignment="textEnd"
            android:background="@color/cardview_dark_background"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="@dimen/button_text"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/_2"
            android:textSize="@dimen/button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:layout_row="1"
            android:layout_column="2"
            android:textSize="@dimen/button_text" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="@dimen/button_text" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="@dimen/button_text" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:layout_row="2"
            android:layout_column="2"
            android:textSize="@dimen/button_text" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:layout_row="3"
            android:layout_column="0"
            android:textSize="@dimen/button_text" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:layout_row="3"
            android:layout_column="1"
            android:textSize="@dimen/button_text" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:layout_row="3"
            android:layout_column="2"
            android:textSize="@dimen/button_text" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:text="@string/_0"
            android:textSize="@dimen/button_text" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_point"
            android:textSize="@dimen/button_text" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:text="="
            android:textSize="@dimen/button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_gravity="fill"
            android:text="C"
            android:textSize="@dimen/button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_gravity="fill"
            android:text="+"
            android:textSize="@dimen/button_text" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_gravity="fill"
            android:text="-"
            android:textSize="@dimen/button_text" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_div"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_gravity="fill"
            android:text="÷"
            android:textSize="@dimen/button_text" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="3"
            android:layout_gravity="fill"
            android:text="x"
            android:textSize="@dimen/button_text" />
    </GridLayout>

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonMaterialLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/material_light" />
    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonMaterialDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/material_dark" />
    </RadioGroup>
</FrameLayout>
